test/tests/compiler/14_pointers/invalid_parse/cast_to_declarator.plx
pub fn main(none) i32 {
    # can only cast to declarator types, not abstract declarators
    return cast<a[][]>(10)
}
